--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4820,7 +4820,7 @@ fieldset:disabled .btn {
 }
 
 .accordion-button:not(.collapsed) {
-    color: #0c63e4;
+    color: #a0a0a0;
     background-color: #e7f1ff;
     box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.125);
 }
